Notificacion corregida